[WTF] Fix OrderedHashTable's translate call https://bugs.webkit.org/show_bug.cgi?id=314619 rdar://176859032

Reviewed by Sosuke Suzuki.

Currently no client exists yet, but OrderedHashTable should initialize
entry with empty state before calling translate.

Tests: Tools/TestWebKitAPI/Tests/WTF/OrderedHashMap.cpp
       Tools/TestWebKitAPI/Tests/WTF/OrderedHashSet.cpp

* Source/WTF/wtf/OrderedHashTable.h:
* Tools/TestWebKitAPI/Tests/WTF/OrderedHashMap.cpp:
(TestWebKitAPI::TEST(WTF_OrderedHashMap, HashTranslatorAddConstructsEmptyBeforeAssign)):
* Tools/TestWebKitAPI/Tests/WTF/OrderedHashSet.cpp:
(TestWebKitAPI::TEST(WTF_OrderedHashSet, HashTranslatorAddConstructsEmptyBeforeAssign)):
(TestWebKitAPI::TEST(WTF_OrderedHashSet, HashTranslatorAddIntoRawStorage)):
(TestWebKitAPI::TEST(WTF_OrderedHashSet, HashTranslatorAddTriggersRehashAndCompact)):

Canonical link: https://commits.webkit.org/313086@main